[package]
name = "two-pc"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "2pc-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["http2", "tower-log", "tracing", "ws"] }
clap = { version = "4", features = ["derive"] }
mime_guess = "2.0.5"
rust-embed = { version = "8", features = ["deterministic-timestamps", "interpolate-folder-path"] }
getrandom = "0.3"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
